Conexion de back y front

--- a/src/app/components/mascotas/mascotas.component.html
+++ b/src/app/components/mascotas/mascotas.component.html
@@ -18,7 +18,7 @@
                 <i class="fas fa-cat" *ngIf="mascota.especie === 'Gato'"></i>
                 {{ mascota.especie }}</span>
           <span><i class="fas fa-birthday-cake"></i> {{ mascota.edad }} años</span>
-          <span><i class="fas fa-ruler-combined"></i> {{ mascota.raza }}</span>
+          <span><i class="fas fa-ruler-combined"></i> {{ mascota.tamano }}</span>
         </div>
         
         <p class="mascota-description">{{ mascota.descripcion }}</p>
