Implementacion de petcard

--- a/src/app/components/mascotas/mascotas.component.html
+++ b/src/app/components/mascotas/mascotas.component.html
@@ -31,7 +31,7 @@
           <span class="match-percent">{{ mascota.compatabilidad}}%</span>
         </div>
         
-        <button class="btn-adoptar" (click)="verDetalle(i)">
+        <button class="btn-adoptar" (click)="verDetalle(mascota)">
           <i class="fas fa-heart"></i> Conocer más
         </button>
       </div>
