--- a/src/app/components/administrar/administrar.component.css
+++ b/src/app/components/administrar/administrar.component.css
@@ -112,6 +112,21 @@
   font-size: 0.8rem;
 }
 
+.alert {
+  margin: 15px;
+  padding: 10px 20px;
+  border-radius: 8px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.success-alert {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+}
+
+
 /* Estados */
 .status-available {
   color: #FCAFAF;
