--- a/src/app/components/administrar/administrar.component.html
+++ b/src/app/components/administrar/administrar.component.html
@@ -138,8 +138,8 @@
           <div class="form-group">
             <label>Sexo *</label>
             <select class="form-control" [(ngModel)]="currentMascota.sexo" name="sexo" required>
-              <option value="macho">Macho</option>
-              <option value="hembra">Hembra</option>
+              <option value="Macho">Macho</option>
+              <option value="Hembra">Hembra</option>
             </select>
           </div>
           <div class="form-group">
