Correcion values mascota

--- a/src/app/components/administrar/administrar.component.html
+++ b/src/app/components/administrar/administrar.component.html
@@ -138,7 +138,7 @@
           <div class="form-group">
             <label>Sexo *</label>
             <select class="form-control" [(ngModel)]="currentMascota.sexo" name="sexo" required>
-              <option value="macho">Macho</option>
+              <option value="Macho">Macho</option>
               <option value="hembra">Hembra</option>
             </select>
           </div>
