--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
         <i class="fas fa-envelope"></i> Contacto
       </a>
       <a *ngIf="auth.isAdmin()" class="nav-link admin-link" routerLinkActive="active" [routerLink]="['/usuarios']">
-        <i class="fas fa-user-cog"></i> Usuarios
+        <i class="fas fa-user-cog"></i> Panel Usuarios
       </a>
       <a *ngIf="auth.isAdmin()" class="nav-link admin-link" routerLinkActive="active"
         [routerLink]="['/administrar']">
@@ -53,7 +53,7 @@
     </a>
 
     <a *ngIf="auth.isAdmin()" class="mobile-link admin-link" routerLinkActive="active" [routerLink]="['/usuarios']" (click)="toggleMenu()">
-      <i class="fas fa-user-cog"></i> Usuarios
+      <i class="fas fa-user-cog"></i> Panel Usuarios
     </a>
     <a *ngIf="auth.isAdmin()" class="mobile-link admin-link" routerLinkActive="active"
       [routerLink]="['/administrar']" (click)="toggleMenu()">
