front de encuesta
quedo valiendo

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -113,8 +113,8 @@
           Registrarse
         </button>
       </form>
-      <pre>{{ f.value | json }}</pre>
-      <pre>Valid: {{ f.valid }}</pre>
+      <!--<pre>{{ f.value | json }}</pre>
+      <pre>Valid: {{ f.valid }}</pre>-->
 
       <hr />
       <div class="text-center">
